Original Site Update

--- a/index.html
+++ b/index.html
@@ -2,16 +2,81 @@
 <html>
 <head>
 	<title>Resume - Ronan Armstrong</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Manjari|Open+Sans&display=swap" rel="stylesheet">
+	<script src="https://use.fontawesome.com/f27ea17699.js"></script>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<div class="leftMenu">
+	<div class="pullOutIcon">
+		<a href="#"><i class="fa fa-chevron-left" aria-hidden="true" title="Toggle Menu"></i></a>
+	</div>
+	<div class="menuContainer">
+		<h2>Ronan <span>Armstrong</span></h2>
+		<div class="mainNav">
+			<a href="index.html">Home</a>
+			<div class="navDrop">
+				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Recording</a>
+				<div class="navDropBox">
+					<a href="#">Production</a>
+					<a href="#">Engineering</a>
+					<a href="#">Skills</a>
 
-<p>My first paragraph.</p>
+				</div>
+			</div>
+			<div class="navDrop">
+				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Media Production</a>
+				<div class="navDropBox">
+					<a href="#">Visual</a>
+					<a href="#">Audio</a>
+					<a href="#">Skills</a>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+				</div>
+			</div>
+			<div class="navDrop">
+				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Coding</a>
+				<div class="navDropBox">
+					<a href="#">Front End</a>
+					<a href="#">Back End</a>
+					<a href="#">Skills</a>
+
+				</div>
+			</div>
+			<div class="navDrop">
+				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Previous Employment</a>
+				<div class="navDropBox">
+					<a href="#">Sales</a>
+					<a href="#">Technology</a>
+					<a href="#">Skills</a>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="contentBox">
+	<h1>About Me</h1>
+	<p>Hello, I'm Ronan Armstrong, multimedia specialist and musician. Please feel free to look through this resume, and reach out to me with any questions you may have.</p>
+	<h2>Recording</h2>
+	<h3>Production</h3>
+	<p>Since I was 5, I have been engrossed with writing and producing songs for both myself and my friends and family. I started taking classical composition lessons with Dr. Sarah Miller, and continued studying a variety of styles under her until I was 18.</p>
+	<p>I became interested in modern music production after I was introduced to Logic Pro X by a friend of mine when I was 14. Since then, I've produced a wide selection of music, including contemporary pop, hip-hop and R&B, EDM, 80's rock (experimental and glam), synthwave, and many more.</p>
+	<p>My strong foundation in classical technique has given me a unique perspective and approach to popular music, and I try to push myself to my limit in every project I undertake.</p>
+	<h3>Engineering</h3>
+	<p>Shortly after I started using Logic Pro X, I became fascinated with the technical aspects of the tools used in music production. While I studied on my own for a few years, it wasn't until I attended McNally Smith College of Music in 2017 that I learned how large the technology world actually was. It was there that I began learning about the many aspects of both analog and digital recording, and when McNally Smith closed unexpectedly in December of 2017, I pushed myself harder than ever to learn as much as possible, pulling from contacts I made at McNally Smith and the many master classes and user manuals available on the internet.</p>
+	<p>Since I started studying music engineering, I've familiarized myself with many of the most popular pieces of equipment and software used in studio enviroments, including a variety of recording consoles, patchbays, and DAWs/plugins.</p>
+</div>
+
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
