--- a/index.html
+++ b/index.html
@@ -45,16 +45,10 @@
 
 				</div>
 			</div>
-			<div class="navDrop">
-				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Previous Employment</a>
-				<div class="navDropBox">
-					<a href="#">Sales</a>
-					<a href="#">Technology</a>
-					<a href="#">Skills</a>
-
-				</div>
-			</div>
+            <a href="#">Education</a>
+            <a href="#">Employment</a>
 		</div>
+        <p class="whiteText">Copyright 2019 Ronan Armstrong</p>
 	</div>
 </div>
 
@@ -68,7 +62,171 @@
 	<p>My strong foundation in classical technique has given me a unique perspective and approach to popular music, and I try to push myself to my limit in every project I undertake.</p>
 	<h3>Engineering</h3>
 	<p>Shortly after I started using Logic Pro X, I became fascinated with the technical aspects of the tools used in music production. While I studied on my own for a few years, it wasn't until I attended McNally Smith College of Music in 2017 that I learned how large the technology world actually was. It was there that I began learning about the many aspects of both analog and digital recording, and when McNally Smith closed unexpectedly in December of 2017, I pushed myself harder than ever to learn as much as possible, pulling from contacts I made at McNally Smith and the many master classes and user manuals available on the internet.</p>
-	<p>Since I started studying music engineering, I've familiarized myself with many of the most popular pieces of equipment and software used in studio enviroments, including a variety of recording consoles, patchbays, and DAWs/plugins.</p>
+	<p>Since I started studying music engineering, I've familiarized myself with many of the most popular pieces of equipment and software used in studio enviroments, including a variety of recording consoles, patchbays, and DAWs/plugins. After buying an analog recording console in the spring of 2018, I took it upon myself to hand wire a patchbay system, including both full and half normal connections, solder-type and ADC punchdown, and over a half mile of cable from Redco.</p>
+    <h3>Skills</h3>
+    <div class="accordionContainer">
+        <div class="accordionPanel">
+            <a class="accordionTitle" href="">Software Proficiency <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+            <div class="accordionContents">
+                <p>This section only includes music production related software. To view commercial audio and video software, please view the appropriate section.</p>
+                <h4>Mastery of</h4>
+                <ul>
+                    <li>Pro Tools 10/11/12/HD</li>
+                    <li>Logic Pro X</li>
+                    <li>Ableton Live 9/10</li>
+                    <li>All Native Instruments Plugins</li>
+                    <li>All Waves Plugins</li>
+                    <li>iZotope Ozone 8 Advanced and Neutron 3 Advanced</li>
+                    <li>Sampling Techniques and Instrument Creation in Kontakt 5/6</li>
+                    <li>All FabFilter Plugins</li>
+                    <li>Serum and LFOTool</li>
+                    <li>Vocalsynth 2</li>
+                    <li>ValhallaRoom and Most Algorithmic Reverbs</li>
+                </ul>
+                <h4>Detailed Knowledge of</h4>
+                <ul>
+                    <li>FL Studio</li>
+                    <li>Studio One</li>
+                    <li>Most Other DAWs</li>
+                    <li>Omnisphere</li>
+                    <li>Sylenth1</li>
+                    <li>A Variety of Third Party Instruments and Effects</li>
+                </ul>
+            </div>
+        </div>
+        <div class="accordionPanel">
+            <a class="accordionTitle" href="">Hardware Proficiency <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+            <div class="accordionContents">
+                <h4>Mastery of</h4>
+                <ul>
+                    <li>Analog Signal Flow</li>
+                    <li>AD/DA Conversion</li>
+                    <li>Patchbay Usage and Maintenance</li>
+                    <li>Many Digital and Analog Consoles (SSL, Trident, Midas, API, etc)</li>
+                    <li>Both FOH and BOH Consoles</li>
+                    <li>Control Surfaces such as the Control 24 and the D-Command Series</li>
+                    <li>Analog Compressors (Primarily Avalon Models and the Distressor)</li>
+                    <li>Parametric and Graphic EQs</li>
+                    <li>De-Essers</li>
+                    <li>Preamp Operation</li>
+                    <li>Common Stereo Mic Techniques</li>
+                    <li>Common Mic Placement Techniques</li>
+                    <li>500 Series and 900 Series Modules</li>
+                    <li>
+                        Mic Selection and Best Practices for
+                        <ul>
+                            <li>SM57/58/SM7</li>
+                            <li>Sennheiser MD421</li>
+                            <li>Beta 52/56/57/58</li>
+                            <li>Sennheiser e609/e906</li>
+                            <li>AKG D12/D112</li>
+                            <li>Electro-Voice RE20</li>
+                            <li>Neumann u47-FET/u87</li>
+                            <li>Neumann TLM102/103</li>
+                            <li>Neumann KM-184</li>
+                            <li>AT 4040/4050</li>
+                            <li>AKG C414</li>
+                            <li>Royer 121</li>
+                            <li>Cascade Fathead 1/2</li>
+                            <li>Many other common studio microphones...</li>
+                        </ul>
+                    </li>
+                </ul>
+                <h4>Detailed Knowledge of</h4>
+                <ul>
+                    <li>Modular Synths</li>
+                    <li>Subtractive/Additive/FM Synthesis</li>
+                    <li>Power Conditioning/PSU Maintenance</li>
+                    <li>Guitar/Bass Amplifier/Cabinet Best Practices</li>
+                    <li>Many other pieces of outboard gear...</li>
+                </ul>
+            </div>
+        </div>
+        <div class="accordionPanel">
+            <a class="accordionTitle" href="">Studio Etiquette <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+            <div class="accordionContents">
+                <p>Over my time in studio enviroments, I've learned how to communicate professionally, meet deadlines, and consistently deliver above average performance. I'm also comfortable working odd hours on short notice and staying late when necessary.</p>
+                <p>I find myself at ease conversing and working with my peers and clientele while maintaining a polite and constructive atmosphere.</p>
+                <p>Please ask for references, as I'm more than happy to provide (I have opted not to include them on a publicly available website).</p>
+            </div>
+        </div>
+    </div>
+    <h2>Media Production</h2>
+    <h3>Visual</h3>
+    <p>Visual media has always been a passion of mine, and I've worked on multiple professional projects, including camera and editing work on local television programs and training videos.</p>
+    <p>Outside of video work, I'm an accomplished front end design specialist (please see my "Coding" section for more information regarding this), photo editor, and brand consistency specialist. I've worked with a variety of clients to develop their brand and create a consistent image across social media and print/physical mediums.</p>
+    <h3>Audio</h3>
+    <p>While my primary passion is music, I'm comfortable in commercial audio settings as well. I was mentored by a professional audio/videographer based in the Twin Cities area, and have worked with a variety of production companies to deliver clean, professional audio for their commercial or educational needs.</p>
+    <h3>Skills</h3>
+    <p>While there are a variety of skills listed below, please feel free to look at my Recording Skills section, as there is a lot of overlap.</p>
+    <div class="accordionContainer">
+        <div class="accordionPanel">
+            <a class="accordionTitle" href="#">Software/Hardware <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+            <div class="accordionContents">
+                <h4>Software</h4>
+                <ul>
+                    <li>Photoshop</li>
+                    <li>Premiere Pro</li>
+                    <li>After Effects</li>
+                    <li>Audition</li>
+                    <li>Izotope RX Noise Removal Software</li>
+                    <li>Excel</li>
+                    <li>Many other industry standard software...</li>
+                </ul>
+                <h4>Hardware</h4>
+                <ul>
+                    <li>Most Lavalier Microphones (Wired and Wireless)</li>
+                    <li>PA Systems</li>
+                    <li>Commercial DSLR and Mirrorless Camera Operation</li>
+                    <li>Boom Operation</li>
+                    <li>A variety of other equipment used in visual media production...</li>
+                </ul>
+            </div>
+        </div>
+        <div class="accordionPanel">
+            <a class="accordionTitle" href="#">Social/Etiquette <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+            <div class="accordionContents">
+                <p>As a sales engineer, I learned how to keep a level head and calm disposition in often stressful situations, which has transferred well to my experiences with media production. I'm consistent, reliable, and always looking to exceed expectations on any project given to me.</p>
+                <p>Please ask for references, as I'm more than happy to provide (I have opted not to include them on a publicly available website).</p>
+            </div>
+        </div>
+    </div>
+    <h2>Coding</h2>
+    <h3>Front End</h3>
+    <p>I've been designing and coding user interfaces since I was 12 years old, and have had a significant amount of experience in creating user friendly, accessible interfaces for a variety of clients including Strom Aviation, and a variety of intranet systems.</p>
+    <p>Within interface design, my primary focus has been responsive and accessible design. The majority of web traffic since 2016 has come from a mobile device, and I believe creating a clean interface optimized for low bandwidth connections is crucial in today's web design landscape. To achieve this, I prioritize efficient code coupled with clean and responsive CSS over primarily JavaScript based solutions.</p>
+    <h3>Back End</h3>
+    <p>To complement my experience designing user interfaces, I started designing back end systems in 2016. I've worked with a variety of back end languages ranging from classic ASP to Meteor.js. As a designer, my main focus is on efficient data retrieval and secure data storage. I've worked extensively with hashing/salting sensitive information, as well as a variety of other data security techniques.</p>
+    <p>While my specialty is front end design, I think a clean user interface must be able to interact in a logical and efficient way with the back end, which is why I've learned a variety of database systems, including SQL, Access, MySQL, and MongoDB. I'm also familiar with database structure, including key-value pair systems and NoSQL.</p>
+
+    <h3>Skills</h3>
+    <p>Because the website design industry changes so quickly, I try to maintain a comprehensive understanding of the logic behind many current trends, so I can keep current with my designs and code styles.</p>
+    <p>With that said, I currently am using the following software:</p>
+    <ul>
+        <li>Visual Studio 2019</li>
+        <li>Sublime Text</li>
+        <li>Dreamweaver</li>
+        <li>GitHub</li>
+        <li>CodePen</li>
+        <li>Koala SCSS/SASS Manager</li>
+    </ul>
+    <p>and for the library/languages:</p>
+    <ul>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>JavaScript (ES5/6)</li>
+        <li>jQuery</li>
+        <li>Angular.js</li>
+        <li>React.js</li>
+        <li>Node.js</li>
+        <li>Meteor.js (Based on Node)</li>
+        <li>Bootstrap 4</li>
+    </ul>
+    <p>I'm also familiar with hundreds of user libraries and plugins, but this comprises the core of my coding preferences.</p>
+    <h2>Education</h2>
+    <h3>McNally Smith College of Music</h3>
+    <span class="subTitle">Fall 2017 - December 2017</span>
+    <p>I attended McNally Smith up until it's untimely closing in December 2017.</p>
 </div>
 
 <script
