--- a/index.html
+++ b/index.html
@@ -17,53 +17,53 @@
 	<div class="menuContainer">
 		<h2>Ronan <span>Armstrong</span></h2>
 		<div class="mainNav">
-			<a href="index.html">Home</a>
+			<a href="#home">Home</a>
 			<div class="navDrop">
-				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Recording</a>
+				<a href="#"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Recording</a>
 				<div class="navDropBox">
-					<a href="#">Production</a>
-					<a href="#">Engineering</a>
-					<a href="#">Skills</a>
+					<a href="#recProduction">Production</a>
+					<a href="#recEngineering">Engineering</a>
+					<a href="#recSkills">Skills</a>
 
 				</div>
 			</div>
 			<div class="navDrop">
-				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Media Production</a>
+				<a href="#"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Media Production</a>
 				<div class="navDropBox">
-					<a href="#">Visual</a>
-					<a href="#">Audio</a>
-					<a href="#">Skills</a>
+					<a href="#mediaVisual">Visual</a>
+					<a href="#mediaAudio">Audio</a>
+					<a href="#mediaSkills">Skills</a>
 
 				</div>
 			</div>
 			<div class="navDrop">
-				<a href="#projects"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Coding</a>
+				<a href="#"><span class="dropArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>Coding</a>
 				<div class="navDropBox">
-					<a href="#">Front End</a>
-					<a href="#">Back End</a>
-					<a href="#">Skills</a>
+					<a href="#codingFrontend">Front End</a>
+					<a href="#codingBackend">Back End</a>
+					<a href="#codingSkills">Skills</a>
 
 				</div>
 			</div>
-            <a href="#">Education</a>
-            <a href="#">Employment</a>
+            <a href="#education">Education</a>
+            <a href="#employment">Employment</a>
 		</div>
         <p class="whiteText">Copyright 2019 Ronan Armstrong</p>
 	</div>
 </div>
 
 <div class="contentBox">
-	<h1>About Me</h1>
-	<p>Hello, I'm Ronan Armstrong, multimedia specialist and musician. Please feel free to look through this resume, and reach out to me with any questions you may have.</p>
-	<h2>Recording</h2>
-	<h3>Production</h3>
-	<p>Since I was 5, I have been engrossed with writing and producing songs for both myself and my friends and family. I started taking classical composition lessons with Dr. Sarah Miller, and continued studying a variety of styles under her until I was 18.</p>
-	<p>I became interested in modern music production after I was introduced to Logic Pro X by a friend of mine when I was 14. Since then, I've produced a wide selection of music, including contemporary pop, hip-hop and R&B, EDM, 80's rock (experimental and glam), synthwave, and many more.</p>
-	<p>My strong foundation in classical technique has given me a unique perspective and approach to popular music, and I try to push myself to my limit in every project I undertake.</p>
-	<h3>Engineering</h3>
-	<p>Shortly after I started using Logic Pro X, I became fascinated with the technical aspects of the tools used in music production. While I studied on my own for a few years, it wasn't until I attended McNally Smith College of Music in 2017 that I learned how large the technology world actually was. It was there that I began learning about the many aspects of both analog and digital recording, and when McNally Smith closed unexpectedly in December of 2017, I pushed myself harder than ever to learn as much as possible, pulling from contacts I made at McNally Smith and the many master classes and user manuals available on the internet.</p>
-	<p>Since I started studying music engineering, I've familiarized myself with many of the most popular pieces of equipment and software used in studio enviroments, including a variety of recording consoles, patchbays, and DAWs/plugins. After buying an analog recording console in the spring of 2018, I took it upon myself to hand wire a patchbay system, including both full and half normal connections, solder-type and ADC punchdown, and over a half mile of cable from Redco.</p>
-    <h3>Skills</h3>
+    <h1 id="home">About Me</h1>
+    <p>Hello, I'm Ronan Armstrong, multimedia specialist and musician. Please feel free to look through this resume, and reach out to me with any questions you may have.</p>
+    <h2 id="recording">Recording</h2>
+    <h3 id="recProduction">Production</h3>
+    <p>Since I was 5, I have been engrossed with writing and producing songs for both myself and my friends and family. I started taking classical composition lessons with Dr. Sarah Miller, and continued studying a variety of styles under her until I was 18.</p>
+    <p>I became interested in modern music production after I was introduced to Logic Pro X by a friend of mine when I was 14. Since then, I've produced a wide selection of music, including contemporary pop, hip-hop and R&B, EDM, 80's rock (experimental and glam), synthwave, and many more.</p>
+    <p>My strong foundation in classical technique has given me a unique perspective and approach to popular music, and I try to push myself to my limit in every project I undertake.</p>
+    <h3 id="recEngineering">Engineering</h3>
+    <p>Shortly after I started using Logic Pro X, I became fascinated with the technical aspects of the tools used in music production. While I studied on my own for a few years, it wasn't until I attended McNally Smith College of Music in 2017 that I learned how large the technology world actually was. It was there that I began learning about the many aspects of both analog and digital recording, and when McNally Smith closed unexpectedly in December of 2017, I pushed myself harder than ever to learn as much as possible, pulling from contacts I made at McNally Smith and the many master classes and user manuals available on the internet.</p>
+    <p>Since I started studying music engineering, I've familiarized myself with many of the most popular pieces of equipment and software used in studio enviroments, including a variety of recording consoles, patchbays, and DAWs/plugins. After buying an analog recording console in the spring of 2018, I took it upon myself to hand wire a patchbay system, including both full and half normal connections, solder-type and ADC punchdown, and over a half mile of cable from Redco.</p>
+    <h3 id="recSkills">Skills</h3>
     <div class="accordionContainer">
         <div class="accordionPanel">
             <a class="accordionTitle" href="">Software Proficiency <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
@@ -151,13 +151,13 @@
             </div>
         </div>
     </div>
-    <h2>Media Production</h2>
-    <h3>Visual</h3>
+    <h2 id="mediaproduction">Media Production</h2>
+    <h3 id="mediaVisual">Visual</h3>
     <p>Visual media has always been a passion of mine, and I've worked on multiple professional projects, including camera and editing work on local television programs and training videos.</p>
     <p>Outside of video work, I'm an accomplished front end design specialist (please see my "Coding" section for more information regarding this), photo editor, and brand consistency specialist. I've worked with a variety of clients to develop their brand and create a consistent image across social media and print/physical mediums.</p>
-    <h3>Audio</h3>
+    <h3 id="mediaAudio">Audio</h3>
     <p>While my primary passion is music, I'm comfortable in commercial audio settings as well. I was mentored by a professional audio/videographer based in the Twin Cities area, and have worked with a variety of production companies to deliver clean, professional audio for their commercial or educational needs.</p>
-    <h3>Skills</h3>
+    <h3 id="mediaSkills">Skills</h3>
     <p>While there are a variety of skills listed below, please feel free to look at my Recording Skills section, as there is a lot of overlap.</p>
     <div class="accordionContainer">
         <div class="accordionPanel">
@@ -191,15 +191,15 @@
             </div>
         </div>
     </div>
-    <h2>Coding</h2>
-    <h3>Front End</h3>
+    <h2 id="coding">Coding</h2>
+    <h3 id="codingFrontend">Front End</h3>
     <p>I've been designing and coding user interfaces since I was 12 years old, and have had a significant amount of experience in creating user friendly, accessible interfaces for a variety of clients including Strom Aviation, and a variety of intranet systems.</p>
     <p>Within interface design, my primary focus has been responsive and accessible design. The majority of web traffic since 2016 has come from a mobile device, and I believe creating a clean interface optimized for low bandwidth connections is crucial in today's web design landscape. To achieve this, I prioritize efficient code coupled with clean and responsive CSS over primarily JavaScript based solutions.</p>
-    <h3>Back End</h3>
+    <h3 id="codingBackend">Back End</h3>
     <p>To complement my experience designing user interfaces, I started designing back end systems in 2016. I've worked with a variety of back end languages ranging from classic ASP to Meteor.js. As a designer, my main focus is on efficient data retrieval and secure data storage. I've worked extensively with hashing/salting sensitive information, as well as a variety of other data security techniques.</p>
     <p>While my specialty is front end design, I think a clean user interface must be able to interact in a logical and efficient way with the back end, which is why I've learned a variety of database systems, including SQL, Access, MySQL, and MongoDB. I'm also familiar with database structure, including key-value pair systems and NoSQL.</p>
 
-    <h3>Skills</h3>
+    <h3 id="codingSkills">Skills</h3>
     <p>Because the website design industry changes so quickly, I try to maintain a comprehensive understanding of the logic behind many current trends, so I can keep current with my designs and code styles.</p>
     <p>With that said, I currently am using the following software:</p>
     <ul>
@@ -223,10 +223,18 @@
         <li>Bootstrap 4</li>
     </ul>
     <p>I'm also familiar with hundreds of user libraries and plugins, but this comprises the core of my coding preferences.</p>
-    <h2>Education</h2>
+    <h2 id="education">Education</h2>
     <h3>McNally Smith College of Music</h3>
     <span class="subTitle">Fall 2017 - December 2017</span>
-    <p>I attended McNally Smith up until it's untimely closing in December 2017.</p>
+    <p>I attended McNally Smith up until it's untimely closing in December 2017, maintaining a 4.0 GPA over the semester while learning about a variety of recording and production techniques.</p>
+    <h3>Normandale Community College</h3>
+    <span class="subTitle">Spring 2018 - Fall 2019</span>
+    <p>After the closing of McNally Smith, I opted to complete some of the general education requirements needed for most degrees by taking a variety of business, science, and literature classes at my local community college. There, I originally struggled to maintain my GPA while working through the mental health problems caused by the abrupt closing of my school, but after my first semester of 3.75, recovered back to 4.0 for the remainder of my classes there.</p>
+    <h3>IPR College of Creative Arts</h3>
+    <span class="subTitle">Spring 2018 - Fall 2019</span>
+    <p>To supplement my general education studies, I took classes at IPR, where I was able to interact with a variety of audio mediums, doing both music production and foley/film production.</p>
+    <h2 id="employment">Employment</h2>
+    <p>In an effort to protect their privacy, I've chosen to leave my employers out of this public document. If you're interested, please feel free to reach out to me, and I will provide you with full employment history and references.</p>
 </div>
 
 <script
