--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <li>Audition</li>
                     <li>Izotope RX Noise Removal Software</li>
                     <li>Excel</li>
-                    <li>Many other industry standard software...</li>
+                    <li>Many other industry standard programs...</li>
                 </ul>
                 <h4>Hardware</h4>
                 <ul>
@@ -179,6 +179,7 @@
                     <li>PA Systems</li>
                     <li>Commercial DSLR and Mirrorless Camera Operation</li>
                     <li>Boom Operation</li>
+                    <li>Detailed Knowledge of AV Data Protocols</li>
                     <li>A variety of other equipment used in visual media production...</li>
                 </ul>
             </div>
@@ -216,12 +217,11 @@
         <li>CSS3</li>
         <li>JavaScript (ES5/6)</li>
         <li>jQuery</li>
-        <li>Angular.js</li>
-        <li>React.js</li>
         <li>Node.js</li>
         <li>Meteor.js (Based on Node)</li>
-        <li>Bootstrap 4</li>
+        <li>Bootstrap 3 and 4</li>
     </ul>
+    <p>I am also familiar with component based systems such as React and Angular, but the majority of my work until now has been in templating using things like Handlebars and Blaze.
     <p>I'm also familiar with hundreds of user libraries and plugins, but this comprises the core of my coding preferences.</p>
     <h2 id="education">Education</h2>
     <h3>McNally Smith College of Music</h3>
